# lrm

./: .gitattributes  .gitignore  README.md  dpo.py  lrm.py  pyproject.toml  starling.py  utils.py  zephyr.py
data/: Mistral-7B-Instruct-v0.1_completions.json  Mistral-7B-Instruct-v0.1_dpo_completions.json  Mistral-7B-Instruct-v0.1_dpo_logit_diff_a2_completions.json  Mistral-7B-Instruct-v0.1_dpo_probe_steer_s-4.0_completions.json  Mistral-7B-Instruct-v0.1_dpo_probe_steer_s-8.0_completions.json  Mistral-7B-Instruct-v0.1_dpo_probe_steer_s4.0_completions.json  Mistral-7B-Instruct-v0.1_dpo_probe_steer_s8.0_completions.json  Qwen2.5-1.5B-Instruct_completions.json  Qwen2.5-1.5B-Instruct_dpo_completions.json  all_merged_completions.json  merged_completions.json  mistral_completions.json  mistral_dpo_completions.json  mistral_dpo_logit_diff_a2_completions.json  qwen_completions.json
probes/: 029e8d45602c.pt  0ddb9c2b1c00.pt  1340f0f97c78.pt  2051df82c286.pt  2262ac976936.pt  23913956c03c.pt  28a0ab0746aa.pt  31552f1ae2a9.pt  3a2772b6799b.pt  477997012ae7.pt  56c65a43a52b.pt  5f9703172a3f.pt  6137ebb56343.pt  66ca3500f31e.pt  68dd0ef91688.pt  70b43e18431f.pt  711061a94bf3.pt  76351f337464.pt  789c83dc7eda.pt  7dfe883989b9.pt  8034c7a96c75.pt  85021d493664.pt  87fd71fa102c.pt  9225a2cbd1e7.pt  9d9326a58309.pt  a042d7d21190.pt  a1f25d54b9e5.pt  a769792c200e.pt  ab8b5104a685.pt  b1aaea5bf0b2.pt  bce333d7c8c1.pt  d44f7d5b26c8.pt  d77f19529ada.pt  ddf5e0e47cc2.pt  e30511182ede.pt  e96402b1ef01.pt  ec50cdd816fa.pt  ef82cd89c0bb.pt  efad62c7a0bc.pt  fb2956bcd4b5.pt  (+1 more)
report/: report.md
(+1 files in other folders)
