[project]
name = "introspect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "plotly>=6.4.0",
    "tabulate>=0.9.0",
    "transformer-lens>=2.16.1",
    "transformers>=4.57.1",
    "trl>=0.12.0",
]

[tool.uv.sources]
transformer-lens = { git = "https://github.com/ekhadley/TransformerLens" }